# calibot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_with_ngrok.sh
backend/app/: config.py  main.py  prompts.py
backend/app/agent/: nlp_agent.py
backend/app/api/: models.py  routes.py
backend/app/prompts/: agent_system_prompt.py  intent_extraction_prompt.py  relevancy_classifier_prompt.py  small_talk_system_prompt.py
backend/app/services/: ai_service.py  conversation.py  google_calendar.py  telegram.py
backend/app/utils/: helpers.py
