docker build -t calibot-backend .
docker run -p 8060:8060 --env-file backend/app/.env calibot-backend[project]
name = "calibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "google-api-python-client>=2.162.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "litellm>=1.61.16",
    "pydantic-ai>=0.0.27",
    "pydantic-settings>=2.8.0",
    "python-telegram-bot[ext]>=21.10",
]
